--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,11 +1,8 @@
 
 name: Python package
-
 on:
   push:
     branches: [ main ]
- 
-
 jobs:
   build:
 
@@ -23,7 +20,9 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install pytest
+        pip install -r requirements.txt
+        
     - name: Test with pytest
       run: |
         pytest test.py
+
