--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -6,12 +6,12 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+ 
     strategy:
-      fail-fast: false
       matrix:
+        platform: [ubunto-latest, macos-latest, windows-latest]
         python-version: [3.7, 3.8, 3.9]
-
+    runs-on: ${{ matrix.platform }}
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
