--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,25 +5,25 @@ on:
     branches: [ main ]
   pull_request:    
     branches: [ main ]
-  
 jobs:  
-build:
-       
-       strategy:      
-        matrix:        
-          platform: [ubuntu-latest]
-          python-version: [3.7]    
-          
+  build:
+        
+        strategy:      
+          matrix:        
+            platform: [ubuntu-latest]        
+            python-version: [3.7]            
+            
         runs-on: ${{ matrix.platform }}    
-        steps:   
+        steps:
         - uses: actions/checkout@v2    
         - name: Set up Python ${{ matrix.python-version }}      
           uses: actions/setup-python@v2      
-          with:
+          with:        
             python-version: ${{ matrix.python-version }}    
         - name: Install dependencies      
           run: |
-            python -m pip install --upgrade pip        pip install -r requirements.txt    
+            python -m pip install --upgrade pip        
+            pip install -r requirements.txt    
         - name: Test with pytest      
           run: |
             pytest test.py    
